@@ -1,7 +1,6 @@
 import os
 import sys
 import utils
-import pprint
 import config
 import doctypes
 import filecache
@@ -20,6 +19,8 @@ class Template(object):
         'text': translation.Compiler.from_text}
 
     format = 'xml'
+    filename = '<string>'
+    
     implicit_doctype = doctypes.xhtml
     explicit_doctype = None
     
@@ -36,6 +37,12 @@ class Template(object):
         if doctype is not None:            
             self.explicit_doctype = doctype
         
+    def __repr__(self):
+        return u"<%s %s>" % (self.__class__.__name__, self.filename)
+
+    def __call__(self, **kwargs):
+        return self.render(**kwargs)
+    
     @property
     def macros(self):
         return Macros(self.render_macro)
@@ -63,55 +70,26 @@ class Template(object):
 
     def render(self, **kwargs):
         template = self.cook_check(parameters=kwargs)
-        if config.DEBUG_MODE is False:
-            return template.render(**kwargs)
-        
-        try:
-            return template.render(**kwargs)
-        except:
-            tb = sys.exc_info()[-1]
-            lineno = tb.tb_next.tb_next.tb_lineno-1
-            del tb
+        return self.render_template(template, **kwargs)
 
-            # locate source code annotation (these are available from
-            # the template source as comments)
-            source = template.source.split('\n')
-            for i in reversed(range(lineno)):
-                if source[i].lstrip().startswith('#'):
-                    annotation = source[i].split('#', 1)[-1].lstrip()
-                    break
-            else:
-                annotation = ""
-                
-            formatted_arguments = pprint.pformat(kwargs).split('\n')
-            
-            # indent consecutive arguments for readability
-            for index, string in enumerate(formatted_arguments[1:]):
-                formatted_arguments[index+1] = " "*15 + string
-            
-            utils.reraise(
-                sys.exc_info(),
-                ("Caught exception rendering template."
-                 "\n\n"
-                 " - Expression: %s\n"
-                 " - Instance:   %s\n"
-                 " - Arguments:  %s\n"
-                 ) % (annotation, repr(self), "\n".join(formatted_arguments)))
-                      
     def render_macro(self, macro, global_scope=False, parameters={}):
         template = self.cook_check(
             parameters=parameters, macro=macro, global_scope=global_scope)
-        return template.render(**parameters)
+        return self.render_template(template, **parameters)
     
     def render_xinclude(self, **kwargs):
         return self.render_macro("", parameters=kwargs)
 
-    def __repr__(self):
-        return u"<%s %d>" % (self.__class__.__name__, id(self))
-
-    def __call__(self, **kwargs):
-        return self.render(**kwargs)
-    
+    def render_template(self, __template__, **kwargs):
+        if config.DEBUG_MODE is False:
+            return __template__.render(**kwargs)
+        
+        try:
+            return __template__.render(**kwargs)
+        except:
+            utils.raise_template_exception(
+                __template__.source, repr(self), kwargs, sys.exc_info())
+                      
 class TemplateFile(Template):
     """Constructs a template object using the template language
     defined by ``parser``. Must be passed an absolute (or
@@ -196,9 +174,6 @@ class TemplateFile(Template):
             return os.path.getmtime(self.filename)
         except (IOError, OSError):
             return 0
-
-    def __repr__(self):
-        return u"<%s %s>" % (self.__class__.__name__, self.filename)
 
 class XIncludes(object):
     """Dynamic XInclude registry providing a ``get``-method that will
