@@ -104,7 +104,7 @@ function which we'll call from inside the template.
     ...
   RuntimeError: Caught exception rendering template.
     ...
-    dummy()
+    "dummy()"
     ...
   NameError: ...
 
